updated feature engineering

--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -22,7 +22,8 @@
         "id": "jH50Bo4cCim-"
       },
       "source": [
-        "pip install pandas_datareader --upgrade"
+        "!pip install pandas_datareader --upgrade\n",
+        "!git clone https://github.com/pranjal0207/stock-trading-using-machine-learning.git"
       ],
       "execution_count": null,
       "outputs": []
@@ -41,7 +42,7 @@
         "import seaborn as sns\n",
         "import warnings\n",
         "from importlib import reload\n",
-        "from feature_engineering_helper import ma7, ma21, rsi, macd, bollinger_bands, momentum"
+        "from feature_engineering_helper import ma7, ma21, macd, bollinger_bands, momentum"
       ],
       "execution_count": null,
       "outputs": []
@@ -52,7 +53,7 @@
         "id": "YL7U5QgHH5Fg"
       },
       "source": [
-        "stock_list = [\"RELIANCE.NS\", \"TCS.NS\", \"ICICIBANK.NS\", \"WIPRO.NS\", \"INFY.NS\"]"
+        "stock_list = [\"RELIANCE.NS\", \"TCS.NS\", \"ICICIBANK.NS\", \"WIPRO.NS\", \"INFY.NS\", \"TRIDENT.NS\", \"BHEL.NS\", \"ULTRACEMCO.NS\", \"SBIN.NS\", \"TATAMOTORS.NS\"]"
       ],
       "execution_count": null,
       "outputs": []
@@ -99,7 +100,7 @@
         "id": "aX-qxx4DDJlk"
       },
       "source": [
-        "print('No missing data') if sum(tsla_df.isna().sum()) == 0 else tsla_df.isna().sum()"
+        "print('No missing data') if sum(stock_df.isna().sum()) == 0 else stock_df.isna().sum()"
       ],
       "execution_count": null,
       "outputs": []
